# dokaseca-addons

./: .betterleaks.toml  .betterleaksignore  .codespell-ignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  mkdocs.yaml  promoter.yaml  pyproject.toml  update-summary.md  watchdog.yaml
.github/: dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: pre-commit.yml  promoter.yml  release.yml  watchdog.yml
argocd/appsets/: project.yaml
argocd/appsets/azure/: addons-aso2-appset.yaml
argocd/appsets/enterprise/: addons-kubescape-appset.yaml  addons-nvidia-device-plugin-appset.yaml  addons-nvidia-gpu-operator.yaml
argocd/appsets/exclude/: addons-keptn-appset.yaml  addons-ollama-appset.yaml  addons-zipkin-appset.yaml
argocd/appsets/internal/: addons-gateways-appset.yaml  addons-kro-rgds-appset.yaml
argocd/appsets/oss/: addons-gitops-promoter-appset.yaml  addons-metallb-appset.yaml
configs/appsets/environments/: rustfs.json
docs/: catalog.md
kargo/alertmanager/: project.yaml  warehouse.yaml
kargo/rustfs/: project.yaml  promotion.yaml  stages.yaml  warehouse.yaml
kustomize/gateway-api/v.1.4.0/: kustomization.yaml
kustomize/gitops-promoter/: kustomization.yaml
kustomize/gitops-promoter/v0.18.2/: kustomization.yaml
kustomize/headlamp/: kustomization.yaml
kustomize/parca/v0.25.0/: kustomization.yaml
kustomize/shipwright/: kustomization.yaml
kustomize/tekton/: kustomization.yaml
src/: argocd-promoter.py  argocd-watchdog.py
tests/: addons-rustfs-appset.yaml
(+254 files in other folders)
