[project]
name = "argocd-watchdog"
version = "0.1.0"
description = "Automated Version Updater for ArgoCD ApplicationSets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "packaging>=25.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
